--- a/_site.yml
+++ b/_site.yml
@@ -7,6 +7,8 @@ navbar:
       href: index.html
     - text: "C.V."
       href: cv.html
+    - text: "Teaching"
+      href: teaching.html
     - text: "Research"
       href: research.html
 output:
